working on showcase - frontend